2008-09-03  Martin Rudalics  <rudalics@gmx.at>

	* window.el (pop-up-frame-function): Move ...
	* frame.el (pop-up-frame-function): ... here, to avoid
	"CHANGED outside Customize;".

2008-09-03  Glenn Morris  <rgm@gnu.org>

	* buff-menu.el (buffer-menu-mode-hook): Add obsolete alias.

2008-09-03  Chong Yidong  <cyd@stupidchicken.com>

	* isearch.el (isearch-highlight-regexp): Fix last change, quoting
	non-alphabetical characters properly.

2008-09-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* files.el (auto-mode-alist): Use verilog-mode for SystemVerilog files.

2008-09-02  Martin Rudalics  <rudalics@gmx.at>

	* calc/calc.el (calc-dispatch-map): Fix handling of upcased and
	control-prefixed keys.  (Bug #835)

2008-09-02  Chong Yidong  <cyd@stupidchicken.com>

	* image-mode.el (image-mode): Fix 2008-07-19 change.

2008-09-02  Juanma Barranquero  <lekktu@gmail.com>

	* tool-bar.el (tool-bar-add-item): Fix typo in docstring.

	* emulation/tpu-edt.el (tpu-kill-buffer): Doc fix.

2008-09-02  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/lucid.el (try-face-font): Remove dead alias.

	* progmodes/cc-langs.el (c-opt-op-identitier-prefix): Fix typo.

2008-09-01  Glenn Morris  <rgm@gnu.org>

	* vc-hooks.el (vc-previous-version): Move alias to vc.el.
	* vc.el (vc-default-previous-version): Move alias here from vc-hooks,
	and fix name typos.  (Bug#856)

2008-09-01  Chong Yidong  <cyd@stupidchicken.com>

	* minibuffer.el (completion-pcm--pattern->regex): When
	completion-ignore-case is non-nil, generate a regexp that ignores
	case.

	* window.el (recenter-top-bottom): Doc fix.

2008-09-01  Simon South  <ssouth@member.fsf.org>

	* progmodes/delphi.el: New maintainer.
	(delphi-interface-types): New var.
	(delphi-composite-types): Use it.
	(delphi-enclosing-indent-of): Distinguish between "interface"
	keyword as a unit separator and used like a class declaration.

2008-09-01  Martin Rudalics  <rudalics@gmx.at>

	* help-fns.el (describe-simplify-lib-file-name)