@@ -1,3 +1,10 @@
+2008-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* minibuffer.el (completion-pcm--pattern->regex): Undo last change.
+	(completion-pcm--all-completions): Move the case-fold-search binding to
+	it also applies to completion-regexp-list (used in all-completions).
+	(completion-pcm--hilit-commonality): Add missing case-fold-search.
+
 2008-09-03  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (pop-up-frame-function): Move ...
